# mdfs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  setup.sh
.cursor/rules/: mdfs.mdc
.github/workflows/: ci.yml
benchmarks/: README.md  benchmark.py
examples/: README.md  minimize.py  nve_vacuum.py  nvt_constraints.py  nvt_hmr.py  nvt_periodic.py  nvt_vacuum.py
notebooks/: md_simulation.ipynb
src/mdfs/: __init__.py  constants.py  constraints.py  energy.py  integrators.py  io.py  masses.py  minimize.py  params.py  partition.py  paths.py  simulate.py  space.py  topology.py  types.py
src/mdfs/common/: periodic_table.py  residue_constants.py
src/mdfs/ffxml/: README.md  __init__.py
src/mdfs/utils/: __init__.py  logging.py
tests/: conftest.py  test_constants.py  test_constraints.py  test_energy.py  test_installation.py  test_integrators.py  test_io.py  test_masses.py  test_minimize.py  test_params.py  test_params_vs_openmm.py  test_partition.py  test_simulate.py  test_space.py  test_utils.py
tests/regressions/: test_poly_a_e2e.py
