[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdfs"
dynamic = ["version"]
authors = [{ name = "Zhaoyang Li", email = "zhaoyangli@stanford.edu" }]
license = { file = "LICENSE" }
readme = "README.md"
description = "Molecular dynamics from scratch (JAX, differentiable forces)"
requires-python = ">=3.12"
keywords = ["molecular-dynamics", "jax", "simulation", "force-field", "openmm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
  "jax>=0.7.2",
  "jaxlib>=0.7.2",
  "mdtraj",
  "numpy",
  "openmm",
  "scipy",
]

[project.urls]
Repository = "https://github.com/FridrichMethod/mdfs"
Issues = "https://github.com/FridrichMethod/mdfs/issues"

[project.optional-dependencies]
notebook = ["jupyter", "matplotlib", "nglview", "pandas", "py3dmol", "seaborn", "tqdm"]
dev = [
  "bandit",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "pytest-env",
  "pytest-xdist",
  "ruff",
]
mypy = ["mypy"]
cuda12 = ["jax[cuda12]"]
all = ["mdfs[notebook,dev,mypy]"]

[tool.setuptools.dynamic]
version = { attr = "mdfs.__version__" }

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["mdfs*"]

[tool.setuptools.package-data]
"mdfs.ffxml" = ["**/*.xml", "README.md"]

[tool.ruff]
target-version = "py312"
preview = true
line-length = 100
src = ["src"]
extend-exclude = [".venv", "build", "dist", "archive", "notebooks"]

[tool.ruff.lint]
select = [
  "A",    # flake8-builtins
  "ANN",  # flake8-annotations
  "ARG",  # flake8-unused-arguments
  "B",    # flake8-bugbear
  "BLE",  # flake8-blind-except
  "C4",   # flake8-comprehensions
  "C90",  # mccabe
  "E",    # pycodestyle
  "F",    # Pyflakes
  "I",    # isort
  "NPY",  # numpy
  "PERF", # perflint
  "PLE",  # pylint-error
  "PTH",  # flake8-use-pathlib
  "RUF",  # ruff
  "SIM",  # flake8-simplify
  "T20",  # flake8-print
  "TID",  # flake8-tidy-imports
  "UP",   # pyupgrade
]
extend-select = ["D", "W", "PLW"]
ignore = ["ANN401", "B905", "E203", "E501", "E741", "UP037"]

[tool.ruff.lint.isort]
known-first-party = ["mdfs"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "D104", "RUF067"]  # package metadata dunders live here
"*.ipynb" = ["F401", "T20", "ANN", "D", "E402"]
"tests/**" = ["ANN", "D", "ARG", "PLW", "T20"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
pretty = true
show_error_codes = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
namespace_packages = true
explicit_package_bases = true
disable_error_code = ["import-not-found", "import-untyped", "no-any-return"]

[[tool.mypy.overrides]]
module = ["openmm.*", "mdtraj.*", "jax.*", "jaxlib.*", "scipy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-v --tb=short --strict-markers --color=yes"
testpaths = ["tests"]
pythonpath = ["src"]
env = ["TQDM_DISABLE=1"]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "gpu: marks tests that require a GPU",
]

[tool.coverage.run]
source = ["src/mdfs"]
branch = false

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]

[tool.bandit]
exclude_dirs = ["tests", "notebooks", "archive"]
